0.47.0/_sources/developer/autogen_builtins_listing.rst.txt
Listings for builtins
=====================

builtins
--------

.. function:: builtins.abs


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.divmod


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.hash


   - defined by ``hash_overload(obj)`` at `numba/targets/hashing.py:63-67 <https://github.com/numba/numba/blob/master/numba/targets/hashing.py#L63-L67>`_

.. function:: builtins.iter


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.len


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``unicode_len(s)`` at `numba/unicode.py:418-423 <https://github.com/numba/numba/blob/master/numba/unicode.py#L418-L423>`_
   - defined by ``charseq_len(s)`` at `numba/charseq.py:347-368 <https://github.com/numba/numba/blob/master/numba/charseq.py#L347-L368>`_
   - defined by ``impl_len(d)`` at `numba/dictobject.py:661-671 <https://github.com/numba/numba/blob/master/numba/dictobject.py#L661-L671>`_
   - defined by ``impl_len(l)`` at `numba/listobject.py:371-379 <https://github.com/numba/numba/blob/master/numba/listobject.py#L371-L379>`_
   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.max


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``indval_max(indval1, indval2)`` at `numba/targets/builtins.py:515-523 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L515-L523>`_
   - defined by ``iterable_max(iterable)`` at `numba/targets/builtins.py:548-550 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L548-L550>`_

.. function:: builtins.min


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``indval_min(indval1, indval2)`` at `numba/targets/builtins.py:504-512 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L504-L512>`_
   - defined by ``iterable_min(iterable)`` at `numba/targets/builtins.py:543-545 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L543-L545>`_

.. function:: builtins.next


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.pow


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.print


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.round


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.sorted


   - defined by ``ol_sorted(iterable, key=None, reverse=False)`` at `numba/targets/listobj.py:1099-1112 <https://github.com/numba/numba/blob/master/numba/targets/listobj.py#L1099-L1112>`_

Not showing 28 unsupported functions.

supported = 12 / 40 = 30.00%


