0.49.0/_sources/developer/autogen_builtins_listing.rst.txt
Listings for builtins
=====================

builtins
--------

.. function:: builtins.abs


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.chr


   - defined by ``ol_chr(i)`` at `numba/cpython/unicode.py:2337-2342 <https://github.com/numba/numba/blob/master/numba/cpython/unicode.py#L2337-L2342>`_

.. function:: builtins.divmod


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.hash


   - defined by ``hash_overload(obj)`` at `numba/cpython/hashing.py:46-50 <https://github.com/numba/numba/blob/master/numba/cpython/hashing.py#L46-L50>`_

.. function:: builtins.iter


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.len


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``unicode_len(s)`` at `numba/cpython/unicode.py:442-447 <https://github.com/numba/numba/blob/master/numba/cpython/unicode.py#L442-L447>`_
   - defined by ``charseq_len(s)`` at `numba/cpython/charseq.py:348-369 <https://github.com/numba/numba/blob/master/numba/cpython/charseq.py#L348-L369>`_
   - defined by ``impl_len(d)`` at `numba/typed/dictobject.py:656-666 <https://github.com/numba/numba/blob/master/numba/typed/dictobject.py#L656-L666>`_
   - defined by ``impl_len(l)`` at `numba/typed/listobject.py:402-410 <https://github.com/numba/numba/blob/master/numba/typed/listobject.py#L402-L410>`_
   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.max


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``indval_max(indval1, indval2)`` at `numba/cpython/builtins.py:504-512 <https://github.com/numba/numba/blob/master/numba/cpython/builtins.py#L504-L512>`_
   - defined by ``iterable_max(iterable)`` at `numba/cpython/builtins.py:537-539 <https://github.com/numba/numba/blob/master/numba/cpython/builtins.py#L537-L539>`_

.. function:: builtins.min


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``indval_min(indval1, indval2)`` at `numba/cpython/builtins.py:493-501 <https://github.com/numba/numba/blob/master/numba/cpython/builtins.py#L493-L501>`_
   - defined by ``iterable_min(iterable)`` at `numba/cpython/builtins.py:532-534 <https://github.com/numba/numba/blob/master/numba/cpython/builtins.py#L532-L534>`_

.. function:: builtins.next


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.ord


   - defined by ``ol_ord(c)`` at `numba/cpython/unicode.py:2297-2306 <https://github.com/numba/numba/blob/master/numba/cpython/unicode.py#L2297-L2306>`_

.. function:: builtins.pow


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.print


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.round


   - defined by ``<class 'numba.core.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.sorted


   - defined by ``ol_sorted(iterable, key=None, reverse=False)`` at `numba/cpython/listobj.py:1099-1112 <https://github.com/numba/numba/blob/master/numba/cpython/listobj.py#L1099-L1112>`_

Not showing 26 unsupported functions.

supported = 14 / 40 = 35.00%


